Added basic calculator shape and style

--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
+	<link rel="stylesheet" href="style.css"/>
 	<script src="source.js"></script>
   </head>
   <body>
+	<div id="calculator">
+		<div id="display"></div>
+		<div class="operations">
+			<button id="add"></button>
+			<button id="subtract"></button>
+			<button id="multiply"></button>
+			<button id="divide"></button>
+		</div>
+	</div>
   </body>
 </html>
