--- a/index.html
+++ b/index.html
@@ -8,12 +8,34 @@
   </head>
   <body>
 	<div id="calculator">
-		<div id="display"></div>
-		<div class="operations">
-			<button id="add"></button>
-			<button id="subtract"></button>
-			<button id="multiply"></button>
-			<button id="divide"></button>
+		<div id="calculator-body">
+			<div id="display">999</div>
+			<div class="rows">
+				<div id="row1">
+					<button id="1">1</button>
+					<button id="2">2</button>
+					<button id="3">3</button>
+					<button id="add">+</button>
+				</div>
+				<div id="row2">
+					<button id="4">4</button>
+					<button id="5">5</button>
+					<button id="6">6</button>
+					<button id="subtract">-</button>
+				</div>
+				<div id="row3">
+					<button id="7">7</button>
+					<button id="8">8</button>
+					<button id="9">9</button>
+					<button id="multiply">x</button>
+				</div>
+				<div id="row4">
+					<button id="clear">C</button>
+					<button id="0">0</button>
+					<button id="=">=</button>
+					<button id="divide">/</button>
+				</div>
+			</div>
 		</div>
 	</div>
   </body>
