Added code to display and make the calculator work

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Calculator</title>
 	<link rel="stylesheet" href="style.css"/>
-	<script src="source.js"></script>
+	<script src="source.js" defer></script>
   </head>
   <body>
 	<div id="calculator">
 		<div id="calculator-body">
-			<div id="display">999</div>
+			<div id="display">0</div>
 			<div class="rows">
 				<div id="row1">
 					<button id="1">1</button>
